update schedule, add event link to Fudan and MCM

--- a/index.html
+++ b/index.html
@@ -90,8 +90,10 @@
 		</ul>
 
 		<h2 id="sec-workshops-seminars">Seminars and Workshops</h2>
-		<ul><li>
-		    July 10 - 12, 2017, <a href="conference/2017-number-theory.html">Workshop on Automorphic Forms and Automorphic Representations</a>.</li>
+		<ul>
+            <li><a href="http://math.fudan.edu.cn/">Events at Fudan University</a></li>
+            <li><a href="http://mcm.amss.cas.cn/">Events at Morningside Center of Mathematical Sciences</a></li>
+            <li>July 10 - 12, 2017, <a href="conference/2017-number-theory.html">Workshop on Automorphic Forms and Automorphic Representations</a>.</li>
 		</ul>
 
 		<h2 id="sec-research">Reseach</h2>
@@ -117,7 +119,7 @@
 
 		<h2 id="sec-talks">Talks</h2>
 		<ul>
-            <li>Moduli spaces of virtual Abelian varieties, University of Melbourne, Parkville, Australia, Jan. 4, 2018
+            <li>Moduli spaces of virtual Abelian varieties, University of Melbourne, Melbourne, Australia, TBD, 2018
             <li>Theta correspondence, period integrals and Arthur parameters,
 			    Westlake Institute for Advanced Studies, Hangzhou, China, Dec. 17, 2017
 		    </li>
@@ -194,6 +196,7 @@
 
 		<h2 id="sec-conferences">Conferences, Workshops and Short Visits</h2>
 		<ul>
+            <li><a href="http://amss.cas.cn/mzxsbg/201712/t20171215_4916462.html">Wei Zhang's Talks</a>, Morningside Center of Mathematics, Chinese Academy of Sciences, Beijing, China, Jan. 2 - 12, 2018</li>
             <li><a href="http://www.scms.fudan.edu.cn/Data/View/1000.html">2017 - 2018 Young Mathematician Forum</a>, Fudan University, Shanghai, China, Dec. 17 - 19, 2017</li>
             <li><a href="http://www.wias.org.cn/chinese-detail-371-8679.html">Number Theory Seminar</a>, Westlake Institute for Advanced Studies, Hangzhou, China, Dec. 16 - 17, 2017</li>
             <li>Visiting Professor Shou-Wu Zhang (张寿武), Princeton University, Princeton, NJ, USA, Oct. 1 - Nov. 30, 2017</li>
@@ -211,7 +214,7 @@
 		    <li><a href="http://prasad-heiermann.weebly.com/main-conference.html">Jean-Morlet Chair Research School and Conference on Relative Trace Formula, Periods,  <var>L</var>-functions, Harmonic Analysis and Langlands Functoriality</a>, CIRM, Marseille, France, May 16 - 27, 2016</li>
 		    <li><a href="http://home.kias.re.kr/MKG/h/EKM2015/">Eisenstein Series on Kac-Moody Groups and Application to Physics</a>, KIAS, Seoul, South Korea, Nov. 12 - 20, 2015</li>
 		    <li><a href="http://2015wnt.csp.escience.cn/dct/page/65580">Workshop on Number Theory</a>, Morningside Center for Mathematics, Beijing, China, July 16 - 31, 2015</li>
-		    <li>Past events are omitted.</li>
+		    <li>Past events are omitted, largely because I did not keep track.</li>
 		</ul>
 
 		<h2 id="sec-employment">Employment and Visiting Positions</h2>
