--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
 		<ul>
             <li><a href="http://math.fudan.edu.cn/">Events at Fudan University</a></li>
             <li><a href="http://mcm.amss.cas.cn/">Events at Morningside Center of Mathematical Sciences</a></li>
+            <li><a href="seminar.html">My Visitors and Their Talks</a></li>
             <li>July 10 - 12, 2017, <a href="conference/2017-number-theory.html">Workshop on Automorphic Forms and Automorphic Representations</a>.</li>
 		</ul>
 
