updated schedule. talked about Bing translation. changed some directories. fixed some typos.

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 			    Virtual Abelian Varieties of GL<sub>2</sub>-type. Submitted. Preprint. 2017. <a href="https://arxiv.org/abs/1507.03069">arXiv:1507.03069</a>.
 		    </li>
 		    <li class="biblio">A Critical Case of Rallis Inner Product Formula.  Sci. China Math. 60 (2017), no. 2, 201–222. <a href="https://arxiv.org/abs/1603.04123">arXiv:1603.04123</a>.</li>
-		    <li class="biblio">Periods and (<var>χ</var>, <var>b</var>)-Factors of Cuspidal Automorphic Forms of Symplectic Groups. With Dihua Jiang (江迪华). Accepted by Israel Journal of Mathematics. 2015. <a href="https://arxiv.org/abs/1507.03297">arXiv:1507.03297</a>.
+		    <li class="biblio">Periods and (<var>χ</var>, <var>b</var>)-Factors of Cuspidal Automorphic Forms of Symplectic Groups. With Dihua Jiang (江迪华). Accepted by Israel Journal of Mathematics. 2016. <a href="https://arxiv.org/abs/1507.03297">arXiv:1507.03297</a>.
 		    </li>
 		    <li class="biblio">On (<var>χ</var>, <var>b</var>)-factors of Cuspidal Automorphic Representations of Unitary Groups II. With Dihua Jiang (江迪华). Preprint. 2015.</li>
 		    <li class="biblio">On (<var>χ</var>, <var>b</var>)-factors of Cuspidal Automorphic Representations of Unitary Groups I. With Dihua Jiang (江迪华).  J. Number Theory 161 (2016), 88–118. <a href="https://arxiv.org/abs/1409.0767">arXiv:1409.0767</a>.</li>
@@ -120,17 +120,17 @@
 
 		<h2 id="sec-talks">Talks</h2>
 		<ul>
-            <li>Moduli spaces of virtual Abelian varieties, University of Melbourne, Melbourne, Australia, TBD, 2018
+            <li>Moduli spaces of virtual Abelian varieties, University of Melbourne, Melbourne, Australia, Feb. 5, 2018
             <li>Theta correspondence, period integrals and Arthur parameters,
 			    Westlake Institute for Advanced Studies, Hangzhou, China, Dec. 17, 2017
 		    </li>
-            <li>Virtual Abelian Varieties of GL(2)-type, Fudan University, Shanghai, China, July 12th, 2017
+            <li>Virtual Abelian Varieties of GL(2)-type, Fudan University, Shanghai, China, July 12, 2017
 		    </li>
 		    <li>Period Integrals, <var>L</var>-functions
 			and (<var>χ</var>, <var>b</var>)-theory,
 			Beijing International Center for Mathematical Research, Beijing, China, July 3, 2017
 		    </li>
-		    <li>Virtual Abelian Varieties of GL(2)-type, Fudan University, Shanghai, China, June 8th, 2017
+		    <li>Virtual Abelian Varieties of GL(2)-type, Fudan University, Shanghai, China, June 8, 2017
 		    </li>
 		    <li>Period Integrals, <var>L</var>-functions
 			and (<var>χ</var>, <var>b</var>)-theory,
@@ -233,7 +233,8 @@
 
 		<h2 id="sec-misc">Miscellaneous</h2>
 		<ul class="plain">
-		    <li><a href="latex-challenges.html">LaTeX Challenges</a></li>
+            <li><a href="misc/disable-bing-auto-translation.html">How to Disable Bing's Auto Translation</a></li>
+		    <li><a href="misc/latex-challenges.html">LaTeX Challenges</a></li>
 		</ul>
 	    </div>
 	</div>
