--- a/misc/disable-bing-auto-translation.html
+++ b/misc/disable-bing-auto-translation.html
@@ -53,7 +53,7 @@
                 </p>
                 <h2>Off-off-topic:</h2>
                 <p>
-                    Let's pretend that we will have a non-static site. Wordpress is a good choice, but it has the record of being once blocked by GFW. Medium is currently being blocked because of the Panama Papers. Theoretically I can run whatever blog software I want on my own relay server, but it may get blocked at any time without prior notice and I definitely do not enjoy having to set up blog software again and again. Conclusion: GFW is severely limiting my choices.
+                    Let's pretend that we will have a non-static site. Wordpress is a good choice, but it has the record of being once blocked by GFW. Medium is currently being blocked because of the Panama Papers. Theoretically I can run whatever blog software I want on my own relay server, but it may get blocked at any time without prior notice and I definitely do not enjoy having to set up blog software again and again. Conclusion: GFW is severely limiting my options.
                 </p>
             </div>
         </div>
