added abstract algebra II course info

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
 
 		<h2 id="sec-teaching">Teaching</h2>
 		<ul>
+		    <li>Spring 2018 MATH130128.01 <a href="teaching/Spring2018_AbstractAlgebraII.html">Abstract Algebra II</a></li>
 		    <li>Spring 2017 MATH620040 <a href="teaching/Spring2017_CommutativeAlgebra.html">Commutative
 			Algebra</a></li>
 		    <li>Spring 2016 MATH620040 <a href="teaching/Spring2016_CommutativeAlgebra.html">Commutative
@@ -218,7 +219,7 @@
 		    <li>Past events are omitted, largely because I did not keep track.</li>
 		</ul>
 
-		<h2 id="sec-employment">Employment and Visiting Positions</h2>
+		<H2 id="sec-employment">Employment and Visiting Positions</h2>
 		<ul class= "plain"><li>Young Investigator, Shanghai Center for Mathematical Sciences, Sept. 2015 - present</li>
 		    <li>Dunham Jackson Assistance Professor, University of Minnesota, Aug. 29, 2011 - May 24, 2015, mainly working with Professor <a href= "http://www.math.umn.edu/~jiang034/">Dihua Jiang (江迪华)</a>.</li>
 		    <li>Visiting Max-Planck Institute for Mathematics, Sept. 1, 2012 - Aug.
