fixed typo in title

--- a/teaching/Spring2018_AbstractAlgebraII.html
+++ b/teaching/Spring2018_AbstractAlgebraII.html
@@ -24,7 +24,7 @@
 
 	    <link rel="stylesheet" href="../css/basic.css"/>
 	    <link id="theme" rel="stylesheet" href="../css/style-1.css"/>
-	    <title>Spring 2017 Commutative Algebra</title>
+	    <title>Spring Spring 2018 Abstract Algebra II</title>
     </head>
     <body>
 
@@ -62,6 +62,6 @@
 		            <tbody id="hw"></tbody>
 		        </table>
 	        </div>
-	</div>
+	    </div>
     </body>
 </html>
