--- a/seminar.html
+++ b/seminar.html
@@ -30,7 +30,7 @@
                         <h3>Wednesday, Mar. 14, 2018</h3>
                     </div>
                     <div class="item-time">
-                        13.30 - 14.30 @ HGD TBD
+                        13.30 - 14.30 @ HGD 2201
                     </div>
                     <div class="item-name">
                         <a href="http://math.umaine.edu/~zhou/">Fan Zhou</a>
