update seminar schedule

--- a/seminar.html
+++ b/seminar.html
@@ -27,6 +27,21 @@
             <div class="standout">
                 <div class="grid-container conference-schedule">
                     <div class="item-date">
+                        <h3>Friday, Mar. 23, 2018</h3>
+                    </div>
+                    <div class="item-time">
+                        15.00 - 16.00 @ HGD 2201
+                    </div>
+                    <div class="item-name">
+                        Bin Xu <br/>(Sichuan University)
+                    </div>
+                    <div class="item-title">
+                        A reciprocal problem of Gan-Gross-Prasad conjectures with an approach via twisted descent method
+                    </div>
+                    <div class="item-abstract">
+                        In this talk, we will introduce a reciprocal problem of the Gan-Gross-Prasad conjectures, and explain an approach using the twisted descent method. In particular, we will give both local and global examples in the case of special orthogonal groups.
+                    </div>
+                    <div class="item-date">
                         <h3>Wednesday, Mar. 14, 2018</h3>
                     </div>
                     <div class="item-time">
