updated talks, hw 4

--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
 
 		<h2 id="sec-talks">Talks</h2>
 		<ul>
+            <li>Lunch Seminar Talk: Periods and Arthur Parameters, Fudan University, Shanghai, China, Mar. 23, 2018
             <li>Moduli spaces of virtual Abelian varieties, University of Melbourne, Melbourne, Australia, Feb. 5, 2018
             <li>Theta correspondence, period integrals and Arthur parameters,
 			    Westlake Institute for Advanced Studies, Hangzhou, China, Dec. 17, 2017
