--- a/index.html
+++ b/index.html
@@ -199,6 +199,8 @@
 
 		<h2 id="sec-conferences">Conferences, Workshops and Short Visits</h2>
 		<ul>
+            <li><a href="http://www.math.zju.edu.cn/news.asp?id=7433">Workshop on "Automorphic Forms, Geometry and Representation Theory"</a>, Zhejiang University, Hangzhou, China, June 4 - 8, 2018</li>
+            <li><a href="http://www.wias.org.cn/chinese-detail-371-9116.html">Number Theory Seminar</a>, Westlake Institute for Advanced Studies, Hangzhou, China, Apr. 21 - 22, 2018</li>
             <li><a href="http://amss.cas.cn/mzxsbg/201712/t20171215_4916462.html">Wei Zhang's Talks</a>, Morningside Center of Mathematics, Chinese Academy of Sciences, Beijing, China, Jan. 2 - 12, 2018</li>
             <li><a href="http://www.scms.fudan.edu.cn/Data/View/1000.html">2017 - 2018 Young Mathematician Forum</a>, Fudan University, Shanghai, China, Dec. 17 - 19, 2017</li>
             <li><a href="http://www.wias.org.cn/chinese-detail-371-8679.html">Number Theory Seminar</a>, Westlake Institute for Advanced Studies, Hangzhou, China, Dec. 16 - 17, 2017</li>
