--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<link rel="stylesheet" href="css/font-awesome/css/font-awesome.min.css"/>
 	<link rel="stylesheet" href="css/basic.css"/>
 	<link id="theme" rel="stylesheet" href="css/style-1.css"/>
-	<title>Chenyan Wu's Homepage</title>
+	<title>Ronggang Shi's Homepage</title>
     </head>
     <body>
 	<div class="fixed-float-nav">
@@ -46,14 +46,13 @@
 	</div>
 	<div  id="sec-top" class= "page">
 	    <div class="header">
-		    <h1>Chenyan Wu (吴晨彦)</h1>
-            <p><a href="https://orcid.org/0000-0002-5896-0122" target="orcid.widget" rel="noopener noreferrer" style="vertical-align:top;"><img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" style="width:1em;margin-right:.5em;" alt="ORCID iD icon">orcid.org/0000-0002-5896-0122</a></p>
+		    <h1>Ronggang Shi (石荣刚)</h1>
 		<p>Young Investigator at Shanghai Center for Mathematical
-		    Sciences<br/><a href="https://cywu.github.io/">https://cywu.github.io/</a></p>
+		    Sciences<br/><a href="https://rgstone.github.io/">https://rgstone.github.io/</a></p>
 	    </div>
 	    <div class= "main">
 		<div>
-		    <p><b>Email:</b> chywu "at" fudan.edu.cn<br/></p>
+		    <p><b>Email:</b> ronggang "at" fudan.edu.cn<br/></p>
 		    <p><b>Mailing Address:</b></p>
 		    <div class="flex-row">
 			<p class="flex-item">220 Handan Rd.<br/>  Fudan University<br/>
@@ -61,7 +60,7 @@
 			    Guanghua East Main Building 2310<br/>
 			    Shanghai, 200433, China</p>
 			<p class="flex-item">上海数学中心，复旦大学<br/>
-			    邯郸路220号，光华楼东主楼2310室<br/>
+			    邯郸路220号，光华楼东主楼2307室<br/>
 			    上海，200433，中国</p>
 		    </div>
 		</div>
