--- a/index.html
+++ b/index.html
@@ -67,26 +67,7 @@
 
 		<h2 id="sec-teaching">Teaching</h2>
 		<ul>
-		    <li>Spring 2018 MATH130128.01 <a href="teaching/Spring2018_AbstractAlgebraII.html">Abstract Algebra II</a></li>
-		    <li>Spring 2017 MATH620040 <a href="teaching/Spring2017_CommutativeAlgebra.html">Commutative
-			Algebra</a></li>
-		    <li>Spring 2016 MATH620040 <a href="teaching/Spring2016_CommutativeAlgebra.html">Commutative
-			Algebra</a></li>
-		    <li>Spring 2015 MATH 4242 <a href="teaching/Spring2015_AppliedLinearAlgebra.html">Applied Linear
-			Algebra Section 001</a></li>
-		    <li>Fall 2014 MATH 4242 Applied Linear Algebra
-			<a href= "teaching/Fall2014_AppliedLinearAlgebra-020.html">Section 020</a> and
-			<a href="teaching/Fall2014_AppliedLinearAlgebra-030.html">Section 030</a></li>
-		    <li>Spring 2014 Math 5248 <a href="teaching/Spring2014_CryptologyAndNumberTheory.html">
-			Cryptology and Number Theory</a></li>
-		    <li>Spring 2014 Math 2374 <a href="teaching/Spring2014_MultivariableCalculusAndVectorAnalysis.html">
-			CSE Multivariable Calculus and Vector Analysis</a></li>
-		    <li>Fall 2013 Math 5248 <a href="teaching/Fall2013_CryptologyAndNumberTheory.html">
-			Cryptology and Number Theory</a></li>
-		    <li>Spring 2012 MATH 2373 <a href="teaching/Spring2012_LinearAlgebraDifferentialEquations.html">
-			CSE Linear Algebra and Differential Equations</a></li>
-		    <li>Fall 2011 MATH 4242 <a href="teaching/Fall2011_AppliedLinearAlgebra.html">Applied Linear
-			Algebra</a></li>
+		    <li>Spring 2018 <a href="teaching/Spring2018_AbstractAlgebraII.html">Ergodic Theory</a></li>
 		</ul>
 
 		<h2 id="sec-workshops-seminars">Seminars and Workshops</h2>
