--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
 		<h2 id="sec-teaching">Teaching</h2>
 		<ul>
-		    <li>Spring 2018 <a href="teaching/Spring2018_AbstractAlgebraII.html">Ergodic Theory</a></li>
+		    <li>Spring 2018 Ergodic Theory</a></li>
 		</ul>
 
 		<h2 id="sec-workshops-seminars">Seminars and Workshops</h2>
