--- a/index.html
+++ b/index.html
@@ -86,17 +86,11 @@
 		
 		<h2 id="sec-publication">Publication and Preprints</h2>
 		<ol class="biblio">
-            <li class="biblio">
-			    Virtual Abelian Varieties of GL<sub>2</sub>-type. Submitted. Preprint. 2017. <a href="https://arxiv.org/abs/1507.03069">arXiv:1507.03069</a>.
-		    </li>
-		    <li class="biblio">A Critical Case of Rallis Inner Product Formula.  Sci. China Math. 60 (2017), no. 2, 201–222. <a href="https://arxiv.org/abs/1603.04123">arXiv:1603.04123</a>.</li>
-		    <li class="biblio">Periods and (<var>χ</var>, <var>b</var>)-Factors of Cuspidal Automorphic Forms of Symplectic Groups. With Dihua Jiang (江迪华). Accepted by Israel Journal of Mathematics. 2016. <a href="https://arxiv.org/abs/1507.03297">arXiv:1507.03297</a>.
-		    </li>
-		    <li class="biblio">On (<var>χ</var>, <var>b</var>)-factors of Cuspidal Automorphic Representations of Unitary Groups II. With Dihua Jiang (江迪华). Preprint. 2015.</li>
-		    <li class="biblio">On (<var>χ</var>, <var>b</var>)-factors of Cuspidal Automorphic Representations of Unitary Groups I. With Dihua Jiang (江迪华).  J. Number Theory 161 (2016), 88–118. <a href="https://arxiv.org/abs/1409.0767">arXiv:1409.0767</a>.</li>
-		    <li class="biblio">Irreducibility of Theta Lifting for Unitary Groups. J. Number Theory, 133(10):3296–3318, 2013. <a href="https://arxiv.org/abs/1409.0770">arXiv:1409.0770</a>.</li>
-		    <li class="biblio">Classification of Small Covers over Prisms up to Equivariant Cobordism. Adv. Math. (China),
-			    37(5):584–590, 2008.</li>
+		    <li class="biblio">(with D. Kleinbock, G. Tomanov), S-adic version of Minkowski’s geometry of numbers and Mahler’s compactness criterion,
+			    J. Number Theory 174 (2017), 150-163. </li>
+		    <li class="biblio">(with J. Tseng)Simultaneous dense and nondense orbits and the space of lattices, Internat. Math. Res. Notices 2015, no. 21, 11276-11288.</li>
+		    <li class="biblio">Convergence of measures under diagonal actions on homogeneous spaces, Adv. Math. 229 (2012), no. 3, 1417–1434.</li>
+		    <li class="biblio">Equidistribution of expanding measures with local maximal dimension and Diophantine approximation, Monatsh. Math. 165 (2012), no. 3-4, 513–541.</li>
 		</ol>
 
 		<h2 id="sec-talks">Talks</h2>
