--- a/index.html
+++ b/index.html
@@ -86,9 +86,13 @@
 		
 		<h2 id="sec-publication">Publication and Preprints</h2>
 		<ol class="biblio">
-		    <li class="biblio">(with D. Kleinbock, G. Tomanov), S-adic version of Minkowski’s geometry of numbers and Mahler’s compactness criterion,
+		    <li class="biblio">(with D. Kleinbock, B. Weiss) Pointwise equidistribution with an error rate and with respect to unbounded functions, 
+			    Math. Ann. 367 (2017), no. 1-2, 857-879.  </li>
+		    <li class="biblio">(with B. Weiss) Invariant measures for solvable groups and Diophantine approximation, 
+			    Israel J. Math. 219 (2017), no. 1, 479-505. </li>
+		    <li class="biblio">(with D. Kleinbock, G. Tomanov) S-adic version of Minkowski’s geometry of numbers and Mahler’s compactness criterion,
 			    J. Number Theory 174 (2017), 150-163. </li>
-		    <li class="biblio">(with J. Tseng)Simultaneous dense and nondense orbits and the space of lattices, Internat. Math. Res. Notices 2015, no. 21, 11276-11288.</li>
+		    <li class="biblio">(with J. Tseng) Simultaneous dense and nondense orbits and the space of lattices, Internat. Math. Res. Notices 2015, no. 21, 11276-11288.</li>
 		    <li class="biblio">Convergence of measures under diagonal actions on homogeneous spaces, Adv. Math. 229 (2012), no. 3, 1417–1434.</li>
 		    <li class="biblio">Equidistribution of expanding measures with local maximal dimension and Diophantine approximation, Monatsh. Math. 165 (2012), no. 3-4, 513–541.</li>
 		</ol>
