--- a/index.html
+++ b/index.html
@@ -86,6 +86,12 @@
 		
 		<h2 id="sec-publication">Publication and Preprints</h2>
 		<ol class="biblio">
+			<li class="biblio">  (with M. Einsiedler) Measure rigidity for solvable group actions in the space of lattices, https://arxiv.org/abs/1702.03084  </li>
+			<li class="biblio"> (with L. Liao, O.N. Solan and N. Tamam) Hausdorff dimension of weighted singular vectors,  http://arxiv.org/abs/1605.01287  </li>
+		     <li class="biblio">  Expanding cone and applications to homogeneous dynamics,  http://arxiv.org/abs/1510.05256  </li>
+		    <li class="biblio"> Pointwise equidistribution for one parameter diagonalizable group action on homogeneous space.  http://arxiv.org/abs/1405.2067 </li>
+		    <li class="biblio"> (with K. Fraczek and C. Ulcigrai) Genericity on curves and applications: pseudo integrable billiards, Eaton lenses and gap distributions, 
+			    J. Mod. Dyn. 12 (2018), 55–122. </li>
 		    <li class="biblio">(with D. Kleinbock, B. Weiss) Pointwise equidistribution with an error rate and with respect to unbounded functions, 
 			    Math. Ann. 367 (2017), no. 1-2, 857-879.  </li>
 		    <li class="biblio">(with B. Weiss) Invariant measures for solvable groups and Diophantine approximation, 
