--- a/index.html
+++ b/index.html
@@ -207,23 +207,20 @@
 		</ul>
 
 		<H2 id="sec-employment">Employment and Visiting Positions</h2>
-		<ul class= "plain"><li>Young Investigator, Shanghai Center for Mathematical Sciences, Sept. 2015 - present</li>
-		    <li>Dunham Jackson Assistance Professor, University of Minnesota, Aug. 29, 2011 - May 24, 2015, mainly working with Professor <a href= "http://www.math.umn.edu/~jiang034/">Dihua Jiang (江迪华)</a>.</li>
-		    <li>Visiting Max-Planck Institute for Mathematics, Sept. 1, 2012 - Aug.
-			31, 2013</li>
+		<ul class= "plain"><li>Young Investigator, Shanghai Center for Mathematical Sciences, 2017/07 - present</li>
+		    <li>Associate Professor, School of Mathematical Sciences/Xiamen University, 2015/08- 2017/06.</li>
+		     <li>Assistant  Professor, School of Mathematical Sciences/Xiamen University, 2009/07- 2015/07.</li>
+			<li>  Postdoc， Mathematical Sciences Research Institute/Berkeley, Program: Geometric and Arithmetic Aspects of   Homogeneous Dynamics </li>
+		    <li>Postdoc, Tel Aviv University，2013/09-2014/12</li>
 		</ul>
 
 		<h2 id="sec-education">Education</h2>
-		<ul class= "plain"><li>Ph.D. Mathematics, Columbia University, 2006–2011, Thesis Advisor:
-		    Professor <a href="https://web.math.princeton.edu/~shouwu/">Shou-Wu Zhang (张寿武)</a>;</li>
-		    <li>B.S. Mathematics, Fudan (复旦) University, 2002–2006.</li>
+		<ul class= "plain"><li>Ph.D. Mathematics, The Ohio State University, 2005/06–2009/06, Thesis Advisor:
+		    Professor Manfred Einsiedler</li>
+		    <li>B.S. Mathematics, Zhejiang University (浙江大学), 2001/09–2005/06.</li>
 		</ul>
 
-		<h2 id="sec-misc">Miscellaneous</h2>
-		<ul class="plain">
-            <li><a href="misc/disable-bing-auto-translation.html">How to Disable Bing's Auto Translation</a></li>
-		    <li><a href="misc/latex-challenges.html">LaTeX Challenges</a></li>
-		</ul>
+
 	    </div>
 	</div>
     </body>
