--- a/index.html
+++ b/index.html
@@ -67,22 +67,18 @@
 
 		<h2 id="sec-teaching">Teaching</h2>
 		<ul>
-		    <li>Spring 2018 Ergodic Theory</a></li>
+		    <li>Spring 2018: Ergodic Theory</a></li>
 		</ul>
 
-		<h2 id="sec-workshops-seminars">Seminars and Workshops</h2>
+		<h2 id="sec-workshops-seminars">Students Seminars</h2>
 		<ul>
-            <li><a href="http://math.fudan.edu.cn/">Events at Fudan University</a></li>
-            <li><a href="http://mcm.amss.cas.cn/">Events at Morningside Center of Mathematical Sciences</a></li>
-            <li><a href="seminar.html">My Visitors and Their Talks</a></li>
-            <li>July 10 - 12, 2017, <a href="conference/2017-number-theory.html">Workshop on Automorphic Forms and Automorphic Representations</a>.</li>
+            <li>Fall 2017: Lie groups </li>
+            <li>Spring 2018: Algebra </li>
+	    <li>Spring 2018: Fourier analysis on number fields </li>
 		</ul>
 
 		<h2 id="sec-research">Reseach</h2>
-		<p>I am most interested in Number Theory and Arithmetic Geometry.
-		    Currently I am focusing on automorphic forms, theta
-		    correspondence, <var>L</var>-functions, endoscopy,
-		    periods and Abelian varieties.<br/></p>
+		<p> homogeneous dynamics, ergodic theory, number theory, fractal geometry </p>
 		
 		<h2 id="sec-publication">Publication and Preprints</h2>
 		<ol class="biblio">
