--- a/index.html
+++ b/index.html
@@ -100,11 +100,12 @@
 		</ol>
 
 、
-		<H2 id="sec-employment">Employment and Visiting Positions</h2>
+		<H2 id="sec-employment">Employment</h2>
 		<ul class= "plain"><li>Young Investigator, Shanghai Center for Mathematical Sciences, 2017/07 - present</li>
 		    <li>Associate Professor, School of Mathematical Sciences/Xiamen University, 2015/08- 2017/06.</li>
-		     <li>Assistant  Professor, School of Mathematical Sciences/Xiamen University, 2009/07- 2015/07.</li>
-			<li>  Postdoc， Mathematical Sciences Research Institute/Berkeley, Program: Geometric and Arithmetic Aspects of   Homogeneous Dynamics </li>
+		     <li>Assistant Professor, School of Mathematical Sciences/Xiamen University, 2009/07- 2015/07.</li>
+			<li>  Postdoc, Mathematical Sciences Research Institute/Berkeley, 
+				Program: Geometric and Arithmetic Aspects of Homogeneous Dynamics </li>
 		    <li>Postdoc, Tel Aviv University，2013/09-2014/12</li>
 		</ul>
 
