--- a/index.html
+++ b/index.html
@@ -24,9 +24,8 @@
 		    <div class="submenu-up">
 			<div class="menu-item flex-col align-center"><a href="#sec-top">Personal Information</a></div>
 			<div class="menu-item flex-col align-center"><a href="#sec-teaching">Teaching</a></div>
-            <div class="menu-item flex-col align-center"><a href="#sec-workshops-seminars">Workshops & Seminars</a></div>
+            <div class="menu-item flex-col align-center"><a href="#sec-workshops-seminars">Students Seminars</a></div>
 			<div class="menu-item flex-col align-center"><a href="#sec-research">Research & Publication</a></div>
-			<div class="menu-item flex-col align-center"><a href="#sec-conferences">Conferences</a></div>
 			<div class="menu-item flex-col align-center"><a href="#sec-employment">Employment & Education</a></div>
 			<div class="menu-item flex-col align-center"><a href="#sec-misc">Miscellaneous</a></div>
 		    </div>
