--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
 		
 		<h2 id="sec-publication">Publication and Preprints</h2>
 		<ol class="biblio">
+			<li class="biblio">  (with L. Guan) Hausdorff dimension of divergent trajectories on homogeneous space, https://arxiv.org/abs/1805.07444  </li>
 			<li class="biblio">  (with M. Einsiedler) Measure rigidity for solvable group actions in the space of lattices, https://arxiv.org/abs/1702.03084  </li>
 			<li class="biblio"> (with L. Liao, O.N. Solan and N. Tamam) Hausdorff dimension of weighted singular vectors,  http://arxiv.org/abs/1605.01287  </li>
 		     <li class="biblio">  Expanding cone and applications to homogeneous dynamics,  http://arxiv.org/abs/1510.05256  </li>
