--- a/index.html
+++ b/index.html
@@ -57,22 +57,12 @@
 			    Guanghua East Main Building 2307<br/>
 			    Shanghai, 200433, China</p>
 			<p class="flex-item">上海数学中心，复旦大学<br/>
-			    邯郸路220号，光华楼东主楼2307室<br/>
-			    上海，200433，中国</p>
+			    淞沪路2005号<br/>
+			    上海，200438，中国</p>
 		    </div>
 		</div>
 
-		<h2 id="sec-teaching">Teaching</h2>
-		<ul>
-		    <li>Spring 2018: Ergodic Theory</a></li>
-		</ul>
-
-		<h2 id="sec-workshops-seminars">Students Seminars</h2>
-		<ul>
-            <li>Fall 2017: Lie groups </li>
-            <li>Spring 2018: Algebra </li>
-	    <li>Spring 2018: Fourier analysis on number fields </li>
-		</ul>
+	
 
 		<h2 id="sec-research">Reseach</h2>
 		<p> homogeneous dynamics, ergodic theory, number theory, fractal geometry </p>
