--- a/index.html
+++ b/index.html
@@ -69,11 +69,16 @@
 		
 		<h2 id="sec-publication">Publication and Preprints</h2>
 		<ol class="biblio">
-			<li class="biblio">  (with L. Guan) Hausdorff dimension of divergent trajectories on homogeneous space, https://arxiv.org/abs/1805.07444  </li>
-			<li class="biblio">  (with M. Einsiedler) Measure rigidity for solvable group actions in the space of lattices, https://arxiv.org/abs/1702.03084  </li>
-			<li class="biblio"> (with L. Liao, O.N. Solan and N. Tamam) Hausdorff dimension of weighted singular vectors,  http://arxiv.org/abs/1605.01287  </li>
-		     <li class="biblio">  Expanding cone and applications to homogeneous dynamics,  http://arxiv.org/abs/1510.05256  </li>
-		    <li class="biblio"> Pointwise equidistribution for one parameter diagonalizable group action on homogeneous space.  http://arxiv.org/abs/1405.2067 </li>
+			<li class="biblio"> Roland Prohaska, Cagri Sert, Ronggang Shi, Expanding measures: Random walks and rigidity on homogeneous spaces, https://arxiv.org/abs/2104.09546  </li>
+			<li class="biblio"> An, Jinpeng; Guan, Lifan; Marnat, Antoine; Shi, Ronggang Divergent trajectories on products of homogeneous spaces. Adv. Math. 390 (2021), Paper No. 107910, 33 pp.   </li>
+			<li class="biblio"> Shi, Ronggang Central limit theorem and cohomological equation on homogeneous spaces. Israel J. Math. 242 (2021), no. 2, 891–931.   </li>
+			<li class="biblio"> Shi, Ronggang Expanding cone and applications to homogeneous dynamics. Int. Math. Res. Not. IMRN 2021, no. 9, 7060–7095.    </li>
+			<li class="biblio"> Rühr, René; Shi, Ronggang Quantitative multiple pointwise convergence and effective multiple correlations. J. Differential Equations 285 (2021), 1–16.   </li>
+			<li class="biblio">  Nesharim, Erez; Rühr, René; Shi, Ronggang Metric Diophantine approximation with congruence conditions. Int. J. Number Theory 16 (2020), no. 9, 1923–1933. </li>
+			<li class="biblio">  (with L. Guan) Hausdorff dimension of divergent trajectories on homogeneous space,  Compos. Math. 156 (2020), no. 2, 340–359. </li>
+			<li class="biblio"> (with L. Liao, O.N. Solan and N. Tamam) Hausdorff dimension of weighted singular vectors in R^2,  J. Eur. Math. Soc. (JEMS) 22 (2020), no. 3, 833–875.   </li>
+		    <li class="biblio"> Pointwise equidistribution for one parameter diagonalizable group action on homogeneous spaceTrans, Amer. Math. Soc. 373 (2020), no. 6, 4189–4221. </li>
+			<li class="biblio">  (with M. Einsiedler) Measure rigidity for solvable group actions in the space of lattices, Monatsh. Math. 189 (2019), no. 3, 421–428.  </li>
 		    <li class="biblio"> (with K. Fraczek and C. Ulcigrai) Genericity on curves and applications: pseudo integrable billiards, Eaton lenses and gap distributions, 
 			    J. Mod. Dyn. 12 (2018), 55–122. </li>
 		    <li class="biblio">(with D. Kleinbock, B. Weiss) Pointwise equidistribution with an error rate and with respect to unbounded functions, 
@@ -88,12 +93,13 @@
 		</ol>
 
 		<H2 id="sec-employment">Employment</h2>
-		<ul class= "plain"><li>Young Investigator, Shanghai Center for Mathematical Sciences, 2017/07 - present</li>
-		    <li>Associate Professor, School of Mathematical Sciences/Xiamen University, 2015/08- 2017/06.</li>
+		<ul class= "plain"><li>Associate Professor, Shanghai Center for Mathematical Sciences, Fudan University, 2020/06 - present</li>
+			<li> Young Investigator, Shanghai Center for Mathematical Sciences, Fudan University, 2017/07 - 2020/06 </li>
+		    <li>Associate Professor, School of Mathematical Sciences/Xiamen University, 2015/07- 2017/06.</li>
 		     <li>Assistant Professor, School of Mathematical Sciences/Xiamen University, 2009/07- 2015/07.</li>
-			<li>  Postdoc, Mathematical Sciences Research Institute/Berkeley, 
+			<li>  Postdoc, Mathematical Sciences Research Institute/Berkeley, 2015/01-2015/05
 				Program: Geometric and Arithmetic Aspects of Homogeneous Dynamics </li>
-		    <li>Postdoc, Tel Aviv University，2013/09-2014/12</li>
+		    <li>Postdoc, Tel Aviv University，2013/10-2014/12</li>
 		</ul>
 
 		<h2 id="sec-education">Education</h2>
