--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
 		    <p><b>Email:</b> ronggang "at" fudan.edu.cn<br/></p>
 		    <p><b>Mailing Address:</b></p>
 		    <div class="flex-row">
-			<p class="flex-item">220 Handan Rd.<br/>  Fudan University<br/>
+			<p class="flex-item">No.2005 Songhu Road <br/>  Fudan University, Jiangwan Campus <br/>
 			    Shanghai Center for Mathematical Sciences<br/>
-			    Guanghua East Main Building 2307<br/>
-			    Shanghai, 200433, China</p>
-			<p class="flex-item">上海数学中心，复旦大学<br/>
+			    Shanghai, 200438, China</p>
+			<p class="flex-item">上海数学中心<br/>
+				复旦大学江湾校区 <br/>
 			    淞沪路2005号<br/>
 			    上海，200438，中国</p>
 		    </div>
@@ -97,8 +97,8 @@
 			<li> Young Investigator, Shanghai Center for Mathematical Sciences, Fudan University, 2017/07 - 2020/06 </li>
 		    <li>Associate Professor, School of Mathematical Sciences/Xiamen University, 2015/07- 2017/06.</li>
 		     <li>Assistant Professor, School of Mathematical Sciences/Xiamen University, 2009/07- 2015/07.</li>
-			<li>  Postdoc, Mathematical Sciences Research Institute/Berkeley, 2015/01-2015/05
-				Program: Geometric and Arithmetic Aspects of Homogeneous Dynamics </li>
+			<li>  Postdoc, Mathematical Sciences Research Institute/Berkeley, 
+				Program: Geometric and Arithmetic Aspects of Homogeneous Dynamics, 2015/01-2015/05 </li>
 		    <li>Postdoc, Tel Aviv University，2013/10-2014/12</li>
 		</ul>
 
