--- a/index.html
+++ b/index.html
@@ -97,8 +97,7 @@
 			<li> Young Investigator, Shanghai Center for Mathematical Sciences, Fudan University, 2017/07 - 2020/06 </li>
 		    <li>Associate Professor, School of Mathematical Sciences/Xiamen University, 2015/07- 2017/06.</li>
 		     <li>Assistant Professor, School of Mathematical Sciences/Xiamen University, 2009/07- 2015/07.</li>
-			<li>  Postdoc, Mathematical Sciences Research Institute/Berkeley, 
-				Program: Geometric and Arithmetic Aspects of Homogeneous Dynamics, 2015/01-2015/05 </li>
+			<li>  Postdoc, Mathematical Sciences Research Institute/Berkeley,  2015/01-2015/05 </li>
 		    <li>Postdoc, Tel Aviv University，2013/10-2014/12</li>
 		</ul>
 
