--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
 		<ol class="biblio">
 			<li class="biblio"> Roland Prohaska, Cagri Sert, Ronggang Shi, Expanding measures: Random walks and rigidity on homogeneous spaces, https://arxiv.org/abs/2104.09546  </li>
 			<li class="biblio"> An, Jinpeng; Guan, Lifan; Marnat, Antoine; Shi, Ronggang Divergent trajectories on products of homogeneous spaces. Adv. Math. 390 (2021), Paper No. 107910, 33 pp.   </li>
-			<li class="biblio"> Shi, Ronggang Central limit theorem and cohomological equation on homogeneous spaces. Israel J. Math. 242 (2021), no. 2, 891–931.   </li>
-			<li class="biblio"> Shi, Ronggang Expanding cone and applications to homogeneous dynamics. Int. Math. Res. Not. IMRN 2021, no. 9, 7060–7095.    </li>
-			<li class="biblio"> Rühr, René; Shi, Ronggang Quantitative multiple pointwise convergence and effective multiple correlations. J. Differential Equations 285 (2021), 1–16.   </li>
-			<li class="biblio">  Nesharim, Erez; Rühr, René; Shi, Ronggang Metric Diophantine approximation with congruence conditions. Int. J. Number Theory 16 (2020), no. 9, 1923–1933. </li>
+			<li class="biblio"> Shi, Ronggang, Central limit theorem and cohomological equation on homogeneous spaces. Israel J. Math. 242 (2021), no. 2, 891–931.   </li>
+			<li class="biblio"> Shi, Ronggang, Expanding cone and applications to homogeneous dynamics. Int. Math. Res. Not. IMRN 2021, no. 9, 7060–7095.    </li>
+			<li class="biblio"> Rühr, René; Shi, Ronggang, Quantitative multiple pointwise convergence and effective multiple correlations. J. Differential Equations 285 (2021), 1–16.   </li>
+			<li class="biblio">  Nesharim, Erez; Rühr, René; Shi, Ronggang, Metric Diophantine approximation with congruence conditions. Int. J. Number Theory 16 (2020), no. 9, 1923–1933. </li>
 			<li class="biblio">  (with L. Guan) Hausdorff dimension of divergent trajectories on homogeneous space,  Compos. Math. 156 (2020), no. 2, 340–359. </li>
 			<li class="biblio"> (with L. Liao, O.N. Solan and N. Tamam) Hausdorff dimension of weighted singular vectors in R^2,  J. Eur. Math. Soc. (JEMS) 22 (2020), no. 3, 833–875.   </li>
 		    <li class="biblio"> Pointwise equidistribution for one parameter diagonalizable group action on homogeneous spaceTrans, Amer. Math. Soc. 373 (2020), no. 6, 4189–4221. </li>
