--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 	<div  id="sec-top" class= "page">
 	    <div class="header">
 		    <h1>Ronggang Shi (石荣刚)</h1>
-		<p>Young Investigator at Shanghai Center for Mathematical
+		<p>Associate Professor at Shanghai Center for Mathematical
 		    Sciences<br/><a href="https://rgstone.github.io/">https://rgstone.github.io/</a></p>
 	    </div>
 	    <div class= "main">
