--- a/index.html
+++ b/index.html
@@ -69,15 +69,15 @@
 		
 		<h2 id="sec-publication">Publication and Preprints</h2>
 		<ol class="biblio">
-			<li class="biblio"> Roland Prohaska, Cagri Sert, Ronggang Shi, Expanding measures: Random walks and rigidity on homogeneous spaces, https://arxiv.org/abs/2104.09546  </li>
-			<li class="biblio"> Jinpeng An, Lifan Guan, Antoine Marnat, Ronggang  Shi,Divergent trajectories on products of homogeneous spaces. Adv. Math. 390 (2021), Paper No. 107910, 33 pp.   </li>
-			<li class="biblio"> Ronggang Shi, Central limit theorem and cohomological equation on homogeneous spaces. Israel J. Math. 242 (2021), no. 2, 891–931.   </li>
-			<li class="biblio"> Ronggang Shi, Expanding cone and applications to homogeneous dynamics. Int. Math. Res. Not. IMRN 2021, no. 9, 7060–7095.    </li>
-			<li class="biblio"> René Rühr, Ronggang Shi, Quantitative multiple pointwise convergence and effective multiple correlations. J. Differential Equations 285 (2021), 1–16.   </li>
-			<li class="biblio">  Erez Nesharim, René Rühr, Ronggang Shi, Metric Diophantine approximation with congruence conditions. Int. J. Number Theory 16 (2020), no. 9, 1923–1933. </li>
+			<li class="biblio"> R. Prohaska, C. Sert, R. Shi, Expanding measures: Random walks and rigidity on homogeneous spaces, https://arxiv.org/abs/2104.09546  </li>
+			<li class="biblio"> J. An, L. Guan, A. Marnat, Ronggang  Shi,Divergent trajectories on products of homogeneous spaces. Adv. Math. 390 (2021), Paper No. 107910, 33 pp.   </li>
+			<li class="biblio"> R. Shi, Central limit theorem and cohomological equation on homogeneous spaces. Israel J. Math. 242 (2021), no. 2, 891–931.   </li>
+			<li class="biblio"> R. Shi, Expanding cone and applications to homogeneous dynamics. Int. Math. Res. Not. IMRN 2021, no. 9, 7060–7095.    </li>
+			<li class="biblio"> R. Rühr, R. Shi, Quantitative multiple pointwise convergence and effective multiple correlations. J. Differential Equations 285 (2021), 1–16.   </li>
+			<li class="biblio">  E. Nesharim, R. Rühr, R. Shi, Metric Diophantine approximation with congruence conditions. Int. J. Number Theory 16 (2020), no. 9, 1923–1933. </li>
 			<li class="biblio">  (with L. Guan) Hausdorff dimension of divergent trajectories on homogeneous space,  Compos. Math. 156 (2020), no. 2, 340–359. </li>
 			<li class="biblio"> (with L. Liao, O.N. Solan and N. Tamam) Hausdorff dimension of weighted singular vectors in R^2,  J. Eur. Math. Soc. (JEMS) 22 (2020), no. 3, 833–875.   </li>
-		    <li class="biblio"> Pointwise equidistribution for one parameter diagonalizable group action on homogeneous spaceTrans, Amer. Math. Soc. 373 (2020), no. 6, 4189–4221. </li>
+		    <li class="biblio"> Pointwise equidistribution for one parameter diagonalizable group action on homogeneous space, Trans, Amer. Math. Soc. 373 (2020), no. 6, 4189–4221. </li>
 			<li class="biblio">  (with M. Einsiedler) Measure rigidity for solvable group actions in the space of lattices, Monatsh. Math. 189 (2019), no. 3, 421–428.  </li>
 		    <li class="biblio"> (with K. Fraczek and C. Ulcigrai) Genericity on curves and applications: pseudo integrable billiards, Eaton lenses and gap distributions, 
 			    J. Mod. Dyn. 12 (2018), 55–122. </li>
