--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 		
 		<h2 id="sec-publication">Publication and Preprints</h2>
 		<ol class="biblio">
-			<li class="biblio"> R. Prohaska, C. Sert, R. Shi, Expanding measures: Random walks and rigidity on homogeneous spaces, https://arxiv.org/abs/2104.09546  </li>
+			<li class="biblio"> R. Prohaska, C. Sert, R. Shi, <i> Expanding measures: Random walks and rigidity on homogeneous spaces, </i> https://arxiv.org/abs/2104.09546  </li>
 			<li class="biblio"> J. An, L. Guan, A. Marnat, Ronggang  Shi,Divergent trajectories on products of homogeneous spaces. Adv. Math. 390 (2021), Paper No. 107910, 33 pp.   </li>
 			<li class="biblio"> R. Shi, Central limit theorem and cohomological equation on homogeneous spaces. Israel J. Math. 242 (2021), no. 2, 891–931.   </li>
 			<li class="biblio"> R. Shi, Expanding cone and applications to homogeneous dynamics. Int. Math. Res. Not. IMRN 2021, no. 9, 7060–7095.    </li>
