--- a/index.html
+++ b/index.html
@@ -70,26 +70,26 @@
 		<h2 id="sec-publication">Publication and Preprints</h2>
 		<ol class="biblio">
 			<li class="biblio"> R. Prohaska, C. Sert, R. Shi, <i> Expanding measures: Random walks and rigidity on homogeneous spaces, </i> https://arxiv.org/abs/2104.09546  </li>
-			<li class="biblio"> J. An, L. Guan, A. Marnat, Ronggang  Shi,Divergent trajectories on products of homogeneous spaces. Adv. Math. 390 (2021), Paper No. 107910, 33 pp.   </li>
-			<li class="biblio"> R. Shi, Central limit theorem and cohomological equation on homogeneous spaces. Israel J. Math. 242 (2021), no. 2, 891–931.   </li>
-			<li class="biblio"> R. Shi, Expanding cone and applications to homogeneous dynamics. Int. Math. Res. Not. IMRN 2021, no. 9, 7060–7095.    </li>
-			<li class="biblio"> R. Rühr, R. Shi, Quantitative multiple pointwise convergence and effective multiple correlations. J. Differential Equations 285 (2021), 1–16.   </li>
-			<li class="biblio">  E. Nesharim, R. Rühr, R. Shi, Metric Diophantine approximation with congruence conditions. Int. J. Number Theory 16 (2020), no. 9, 1923–1933. </li>
-			<li class="biblio">  (with L. Guan) Hausdorff dimension of divergent trajectories on homogeneous space,  Compos. Math. 156 (2020), no. 2, 340–359. </li>
-			<li class="biblio"> (with L. Liao, O.N. Solan and N. Tamam) Hausdorff dimension of weighted singular vectors in R^2,  J. Eur. Math. Soc. (JEMS) 22 (2020), no. 3, 833–875.   </li>
-		    <li class="biblio"> Pointwise equidistribution for one parameter diagonalizable group action on homogeneous space, Trans, Amer. Math. Soc. 373 (2020), no. 6, 4189–4221. </li>
-			<li class="biblio">  (with M. Einsiedler) Measure rigidity for solvable group actions in the space of lattices, Monatsh. Math. 189 (2019), no. 3, 421–428.  </li>
-		    <li class="biblio"> (with K. Fraczek and C. Ulcigrai) Genericity on curves and applications: pseudo integrable billiards, Eaton lenses and gap distributions, 
+			<li class="biblio"> J. An, L. Guan, A. Marnat, Ronggang  Shi, <i> Divergent trajectories on products of homogeneous spaces, </i> Adv. Math. 390 (2021), Paper No. 107910, 33 pp.   </li>
+			<li class="biblio"> R. Shi, <i> Central limit theorem and cohomological equation on homogeneous spaces, </i> Israel J. Math. 242 (2021), no. 2, 891–931.   </li>
+			<li class="biblio"> R. Shi, <i> Expanding cone and applications to homogeneous dynamics, </i> Int. Math. Res. Not. IMRN 2021, no. 9, 7060–7095.    </li>
+			<li class="biblio"> R. Rühr, R. Shi, <i> Quantitative multiple pointwise convergence and effective multiple correlations, </i> J. Differential Equations 285 (2021), 1–16.   </li>
+			<li class="biblio">  E. Nesharim, R. Rühr, R. Shi, <i>  Metric Diophantine approximation with congruence conditions, </i> Int. J. Number Theory 16 (2020), no. 9, 1923–1933. </li>
+			<li class="biblio">  (with L. Guan)<i>  Hausdorff dimension of divergent trajectories on homogeneous space, </i> Compos. Math. 156 (2020), no. 2, 340–359. </li>
+			<li class="biblio"> (with L. Liao, O.N. Solan and N. Tamam)<i>  Hausdorff dimension of weighted singular vectors in R^2, </i>  J. Eur. Math. Soc. (JEMS) 22 (2020), no. 3, 833–875.   </li>
+		    <li class="biblio"> <i>  Pointwise equidistribution for one parameter diagonalizable group action on homogeneous space,</i> Trans, Amer. Math. Soc. 373 (2020), no. 6, 4189–4221. </li>
+			<li class="biblio">  (with M. Einsiedler)<i>  Measure rigidity for solvable group actions in the space of lattices, </i>Monatsh. Math. 189 (2019), no. 3, 421–428.  </li>
+		    <li class="biblio"> (with K. Fraczek and C. Ulcigrai)<i>  Genericity on curves and applications: pseudo integrable billiards, Eaton lenses and gap distributions, </i>
 			    J. Mod. Dyn. 12 (2018), 55–122. </li>
-		    <li class="biblio">(with D. Kleinbock, B. Weiss) Pointwise equidistribution with an error rate and with respect to unbounded functions, 
+		    <li class="biblio">(with D. Kleinbock, B. Weiss) <i> Pointwise equidistribution with an error rate and with respect to unbounded functions, </i>
 			    Math. Ann. 367 (2017), no. 1-2, 857-879.  </li>
-		    <li class="biblio">(with B. Weiss) Invariant measures for solvable groups and Diophantine approximation, 
+		    <li class="biblio">(with B. Weiss)<i>  Invariant measures for solvable groups and Diophantine approximation, </i>
 			    Israel J. Math. 219 (2017), no. 1, 479-505. </li>
-		    <li class="biblio">(with D. Kleinbock, G. Tomanov) S-adic version of Minkowski’s geometry of numbers and Mahler’s compactness criterion,
+		    <li class="biblio">(with D. Kleinbock, G. Tomanov)<i>  S-adic version of Minkowski’s geometry of numbers and Mahler’s compactness criterion, </i>
 			    J. Number Theory 174 (2017), 150-163. </li>
-		    <li class="biblio">(with J. Tseng) Simultaneous dense and nondense orbits and the space of lattices, Internat. Math. Res. Notices 2015, no. 21, 11276-11288.</li>
-		    <li class="biblio">Convergence of measures under diagonal actions on homogeneous spaces, Adv. Math. 229 (2012), no. 3, 1417–1434.</li>
-		    <li class="biblio">Equidistribution of expanding measures with local maximal dimension and Diophantine approximation, Monatsh. Math. 165 (2012), no. 3-4, 513–541.</li>
+		    <li class="biblio">(with J. Tseng)<i>  Simultaneous dense and nondense orbits and the space of lattices, </i> Internat. Math. Res. Notices 2015, no. 21, 11276-11288.</li>
+		    <li class="biblio"><i> Convergence of measures under diagonal actions on homogeneous spaces,  </i>Adv. Math. 229 (2012), no. 3, 1417–1434.</li>
+		    <li class="biblio"><i> Equidistribution of expanding measures with local maximal dimension and Diophantine approximation, </i> Monatsh. Math. 165 (2012), no. 3-4, 513–541.</li>
 		</ol>
 
 		<H2 id="sec-employment">Employment</h2>
