--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 		<h2 id="sec-research">Reseach</h2>
 		<p> homogeneous dynamics, ergodic theory, number theory, fractal geometry </p>
 		
-		<h2 id="sec-publication">Publication and Preprints</h2>
+		<h2 id="sec-publication">Publications and Preprints</h2>
 		<ol class="biblio">
 			<li class="biblio"> R. Prohaska, C. Sert, R. Shi, <i> Expanding measures: Random walks and rigidity on homogeneous spaces, </i> https://arxiv.org/abs/2104.09546  </li>
 			<li class="biblio"> J. An, L. Guan, A. Marnat, Ronggang  Shi, <i> Divergent trajectories on products of homogeneous spaces, </i> Adv. Math. 390 (2021), Paper No. 107910, 33 pp.   </li>
