--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 		<ol class="biblio">
 			<li class="biblio"> R. Prohaska, C. Sert, R. Shi, <i> Expanding measures: Random walks and rigidity on homogeneous spaces, </i> 
 				https://arxiv.org/abs/2104.09546  </li>
-			<li class="biblio"> J. An, L. Guan, A. Marnat, Ronggang  Shi, <i> Divergent trajectories on products of homogeneous spaces, </i> 
+			<li class="biblio"> J. An, L. Guan, A. Marnat, R.  Shi, <i> Divergent trajectories on products of homogeneous spaces, </i> 
 				<b> Adv. Math. </b> 390 (2021), Paper No. 107910, 33 pp.   </li>
 			<li class="biblio"> R. Shi, <i> Central limit theorem and cohomological equation on homogeneous spaces, </i>
 				<b> Israel J. Math. </b> 242 (2021), no. 2, 891–931.   </li>
