--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 	    <div class="header">
 		    <h1>Ronggang Shi (石荣刚)</h1>
 		<p>Associate Professor at Shanghai Center for Mathematical
-		    Sciences Fudan University<br/><a href="https://rgstone.github.io/">https://rgstone.github.io/</a></p>
+		    Sciences Fudan University<br/></p>
 	    </div>
 	    <div class= "main">
 		<div>
