--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 		<div class="submenu overlay-item">
 		    <div class="submenu-up">
 			<div class="menu-item flex-col align-center"><a href="#sec-top">Personal Information</a></div>
-			<div class="menu-item flex-col align-center"><a href="#sec-research">Publication</a></div>
-			    <div class="menu-item flex-col align-center"><a href="#sec-grants">Research & Grants</a></div>
+			<div class="menu-item flex-col align-center"><a href="#sec-papers">Papers</a></div>
+			    <div class="menu-item flex-col align-center"><a href="#sec-research">Research & Grants</a></div>
 			<div class="menu-item flex-col align-center"><a href="#sec-employment">Employment & Education</a></div>
 		    </div>
 		</div>
@@ -62,7 +62,7 @@
 		</div>
 
 		
-		<h2 id="sec-publication">Publications and Preprints</h2>
+		<h2 id="sec-papers">Papers</h2>
 		<ol class="biblio">
 			<li class="biblio"> R. Prohaska, C. Sert, R. Shi, <i> Expanding measures: Random walks and rigidity on homogeneous spaces, </i> 
 				https://arxiv.org/abs/2104.09546  </li>
