--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@ Principal Investigator. </li>
 		    
 		    
 		<h2 id="sec-education">Education</h2>
-		<ul class= "plain"><li>Ph.D. Mathematics, The Ohio State University, 2005/06–2009/06, Thesis Advisor:
-		    Professor Manfred Einsiedler</li>
+		<ul class= "plain"><li>Ph.D. Mathematics, The Ohio State University, 2005/06–2009/06, Advisor:
+		    Manfred Einsiedler</li>
 		    <li>B.S. Mathematics, Zhejiang University (浙江大学), 2001/09–2005/06.</li>
 			<li>Postdoc, Tel Aviv University，2013/10-2014/12</li>
 				<li>  Postdoc, Mathematical Sciences Research Institute/Berkeley,  2015/01-2015/05 </li>
