--- a/index.html
+++ b/index.html
@@ -64,8 +64,12 @@
 		
 		<h2 id="sec-papers">Papers</h2>
 		<ol class="biblio">
+			<li class="biblio"> W. Guo, X. Liu, R. Shi, <i> The Product of linear forms over function fields, </i> 
+			   https://arxiv.org/abs/2411.12264  </li>
+			<li class="biblio"> Q. Huang, R. Shi, <i> Bounded diagonal orbits in homogeneous spaces over function fields, </i> 
+			   https://arxiv.org/abs/2504.17644.  </li>
 			<li class="biblio"> R. Prohaska, C. Sert, R. Shi, <i> Expanding measures: Random walks and rigidity on homogeneous spaces, </i> 
-				https://arxiv.org/abs/2104.09546  </li>
+			    <b>	Forum Math. Sigma  </b>  11 (2023), Paper No. e59, 61 pp.  </li>
 			<li class="biblio"> J. An, L. Guan, A. Marnat, R.  Shi, <i> Divergent trajectories on products of homogeneous spaces, </i> 
 				<b> Adv. Math. </b> 390 (2021), Paper No. 107910, 33 pp.   </li>
 			<li class="biblio"> R. Shi, <i> Central limit theorem and cohomological equation on homogeneous spaces, </i>
@@ -103,13 +107,16 @@
 		    
 		<h2 id="sec-research">Reseach</h2>
 		<p> homogeneous dynamics, ergodic theory, number theory, fractal geometry </p>
+
+		<h2 id="sec-seminar">Seminar</h2>
+		<p> https://www.fudandynamics.com </p>
 		    
 		    <h2 id="sec-grants">    Grants </h2>
 		    <ul class= "plain">
-                  <li>  2013.1-2015.12: NSFC Young Scientists Fund, Grant No. 11201388, 
-Principal Investigator. </li>
+                <li>  2013.1-2015.12: NSFC Young Scientists Fund, Grant No. 11201388, Principal Investigator. </li>
 			    <li> 2013.1-2016.12: NSFC General Program, Grant No. 11271278, Participant. </li>
 			    <li> 2019.1-2022.12: NSFC General Program, Grant No. 11871158, Principal Investigator. </li> 
+				<li>  2022.1-2024.12: Joint NSFC-ISF Research Grant, Grant No. 12161141014, Principal Investigator. </li>
 			    </ul>
 
 		<H2 id="sec-employment">Employment</h2>
